begin add snakeSegment

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="application/javascript" src="lib/util.js"></script>
     <script type="application/javascript" src="lib/movingObject.js"></script>
     <script type="application/javascript" src="lib/snake.js"></script>
+    <script type="application/javascript" src="lib/snakeSegment.js"></script>
     <script type="application/javascript" src="lib/game.js"></script>
     <script type="application/javascript" src="lib/gameView.js"></script>
 
