--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="application/javascript" src="lib/snake.js"></script>
     <script type="application/javascript" src="lib/snakeSegment.js"></script>
     <script type="application/javascript" src="lib/path.js"></script>
+    <script type="application/javascript" src="lib/apple.js"></script>
     <script type="application/javascript" src="lib/game.js"></script>
     <script type="application/javascript" src="lib/gameView.js"></script>
 
