--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <canvas></canvas>
 
     <script type="application/javascript" src="vendor/keymaster.js"></script>
+    <script type="application/javascript" src="vendor/jquery.js"></script>
 
     <script type="application/javascript" src="lib/util.js"></script>
     <script type="application/javascript" src="lib/movingObject.js"></script>
