--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     </div>
 
+    <audio src="lib/sounds/add.wav" preload="auto"></audio>
+    <audio src="lib/sounds/remove.wav" preload="auto"></audio>
+    <audio src="lib/sounds/shrink.wav" preload="auto"></audio>
+
     <script type="application/javascript" src="vendor/keymaster.js"></script>
 
     <script type="application/javascript" src="lib/util.js"></script>
@@ -33,6 +37,7 @@
 
     <script type="application/javascript">
       (function () {
+        var audio = document.getElementsByTagName("audio");
         var timer = document.getElementById("eat-timer");
         var highScore = document.getElementById("high-score");
         var canvasEl = document.getElementsByTagName("canvas")[0];
@@ -40,7 +45,7 @@
         canvasEl.height = PSnake.Game.DIM_Y;
 
         var ctx = canvasEl.getContext("2d");
-        var game = new PSnake.Game();
+        var game = new PSnake.Game(audio);
         new PSnake.GameView(game, ctx, timer, highScore).start();
       })();
     </script>
