--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="screens">
         <div id="pause">
           <div>paused</div>
-          <div>(press space to resume)</div>
+          <div>(press space)</div>
           <img id="instructions" src="lib/images/instructions.png"/>
           <img id="controls" src="lib/images/controls.png"/>
         </div>
