--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Periodic Snake</title>
-    <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="./lib/css/index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -12,8 +12,8 @@
         <div id="pause">
           <div>paused</div>
           <div>(press space)</div>
-          <img id="instructions" src="images/instructions.png"/>
-          <img id="controls" src="images/controls.png"/>
+          <img id="instructions" src="./lib/images/instructions.png"/>
+          <img id="controls" src="./lib/images/controls.png"/>
         </div>
 
         <div id="game-over">
@@ -31,9 +31,9 @@
 
     </div>
 
-    <audio src="audio/add.wav" preload="auto"></audio>
-    <audio src="audio/remove.wav" preload="auto"></audio>
-    <audio src="audio/shrink.wav" preload="auto"></audio>
+    <audio src="./lib/audio/add.wav" preload="auto"></audio>
+    <audio src="./lib/audio/remove.wav" preload="auto"></audio>
+    <audio src="./lib/audio/shrink.wav" preload="auto"></audio>
 
     <script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -46,16 +46,16 @@
 
 		</script>
 
-    <script type="application/javascript" src="vendor/keymaster.js"></script>
+    <script type="application/javascript" src="./lib/vendor/keymaster.js"></script>
 
-    <script type="application/javascript" src="javascripts/util.js"></script>
-    <script type="application/javascript" src="javascripts/movingObject.js"></script>
-    <script type="application/javascript" src="javascripts/snake.js"></script>
-    <script type="application/javascript" src="javascripts/snakeSegment.js"></script>
-    <script type="application/javascript" src="javascripts/path.js"></script>
-    <script type="application/javascript" src="javascripts/apple.js"></script>
-    <script type="application/javascript" src="javascripts/game.js"></script>
-    <script type="application/javascript" src="javascripts/gameView.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/util.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/movingObject.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/snake.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/snakeSegment.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/path.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/apple.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/game.js"></script>
+    <script type="application/javascript" src="./lib/javascripts/gameView.js"></script>
 
     <script type="application/javascript">
       (function () {
