--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Periodic Snake</title>
+    <link rel="icon" href="./lib/images/favicon.png">
     <link href="./lib/css/index.css" rel="stylesheet" type="text/css">
   </head>
 
